Set fixed width for container and header in large screens. Set header width in tablets to 90% of screen width. Search-filters: Use only 75% of width if there is only three options. Use linebreaks in small screensizes in long words such as "Kansanäänestyksestä"

--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/columns.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/columns.less
@@ -11,7 +11,7 @@
         width: 80%;
     }
     @media @desktop-xl{
-        width: 65%;
+        width: 960px;
     }
 
     margin: 0 auto;
