--- a/municipalityinitiative-web/src/main/webapp/css/less-imports/header.less
+++ b/municipalityinitiative-web/src/main/webapp/css/less-imports/header.less
@@ -17,7 +17,7 @@
         }
 
         @media @tablet{
-            width: 75%;
+            width: 90%;
             height: 130px;
             margin: 0 auto;
         }
@@ -31,7 +31,7 @@
         }
 
         @media @desktop-xl{
-            width: 65%;
+            width: 960px;
             height: 130px;
             margin: 0 auto;
         }
